--- a/src/app.css
+++ b/src/app.css
@@ -11,11 +11,18 @@
 	--primary-text: white;
 }
 
+:global(*, *::before, *::after) {
+	box-sizing: border-box;
+}
+
+:global(img) {
+	max-width: 100%;
+}
+
 body {
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, Oxygen-Sans, Ubuntu,
-		Cantarell, “Helvetica Neue”, Arial, sans-serif;
 	margin: 0;
 	padding: 0;
-	color: var(--primary-text);
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, Oxygen-Sans, Ubuntu,
+		Cantarell, “Helvetica Neue”, Arial, sans-serif;
 	background-color: var(--page-background);
 }
