--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
 	/* https://colormagic.app/palette/LeyZMmImFOyT4TGDYeIy */
 
@@ -10,18 +14,7 @@
 	--page-background: var(--cloud-burst);
 	--primary-text: white;
 }
-
-:global(*, *::before, *::after) {
-	box-sizing: border-box;
-}
-
-:global(img) {
-	max-width: 100%;
-}
-
 body {
-	margin: 0;
-	padding: 0;
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, Oxygen-Sans, Ubuntu,
 		Cantarell, “Helvetica Neue”, Arial, sans-serif;
 	background-color: var(--page-background);
