--- a/src/app.css
+++ b/src/app.css
@@ -16,14 +16,28 @@
 	section {
 		@apply mx-auto max-w-lg p-4 pb-8;
 		@apply text-slate-100;
+		@apply shadow-2xl;
+		@apply space-y-4;
+	}
+
+	section.light {
+		@apply text-cloud-burst;
 	}
 
 	h1 {
-		@apply pt-2 text-4xl;
+		@apply text-4xl;
 	}
 
 	h2 {
 		@apply text-3xl font-semibold;
+	}
+
+	h3 {
+		@apply text-2xl;
+	}
+
+	a {
+		@apply underline underline-offset-2;
 	}
 
 	img {
