--- a/src/app.css
+++ b/src/app.css
@@ -14,7 +14,7 @@
 	}
 
 	section {
-		@apply mx-auto max-w-lg p-4 pb-6;
+		@apply mx-auto max-w-lg p-4 pb-4 my-4 rounded border-white/20 border-2;
 		@apply text-slate-100;
 		@apply shadow-2xl;
 		@apply space-y-2;
