:pencil2: Adds room listing

--- a/src/app.css
+++ b/src/app.css
@@ -47,4 +47,16 @@
 	address {
 		@apply not-italic;
 	}
+
+	dt {
+		@apply pt-2 font-semibold;
+	}
+
+	dt:first-of-type {
+		@apply pt-0;
+	}
+
+	dd {
+		@apply ml-4 grid grid-cols-[1fr_4fr] flex-nowrap;
+	}
 }
