:truck: Reorg's file layout

--- a/src/app.css
+++ b/src/app.css
@@ -52,12 +52,8 @@
 		@apply pt-2 font-semibold;
 	}
 
-	dt:first-of-type {
-		@apply pt-0;
-	}
-
 	dd {
-		@apply ml-4 grid grid-cols-[1fr_4fr] flex-nowrap;
+		@apply ml-4;
 	}
 
 	li {
