--- a/src/app.css
+++ b/src/app.css
@@ -1,10 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@layer base {
-	body {
-		font-family: system-ui, -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, Oxygen-Sans,
-			Ubuntu, Cantarell, “Helvetica Neue”, Arial, sans-serif;
-	}
-}
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities'
